--- a/public/index.html
+++ b/public/index.html
@@ -32,6 +32,9 @@
     <meta name="og:url" content="http://got-paper.com">
     <meta name="og:site_name" content="Got Paper">
     <meta name="og:type" content="website">
+
+    <!-- assets -->
+    <link rel="stylesheet" href="https://use.typekit.net/lvl2shj.css">
   </head>
   <body>
     <noscript>
