--- a/public/index.html
+++ b/public/index.html
@@ -35,6 +35,7 @@
 
     <!-- assets -->
     <link rel="stylesheet" href="https://use.typekit.net/lvl2shj.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
   </head>
   <body>
     <noscript>
