Update URLs to production server

--- a/public/index.html
+++ b/public/index.html
@@ -12,24 +12,24 @@
 
     <!-- Search Engine -->
     <meta name="description" content="Online calculator to buy the right amount of toilet paper">
-    <meta name="image" content="http://got-paper.netlify.com/images/social/splash.png">
+    <meta name="image" content="http://got-paper.com/images/social/splash.png">
 
     <!-- Schema.org for Google -->
     <meta itemprop="name" content="Got Paper">
     <meta itemprop="description" content="Online calculator to buy the right amount of toilet paper">
-    <meta itemprop="image" content="http://got-paper.netlify.com/images/social/splash.png">
+    <meta itemprop="image" content="http://got-paper.com/images/social/splash.png">
 
     <!-- Twitter -->
     <meta name="twitter:card" content="summary">
     <meta name="twitter:title" content="Got Paper">
     <meta name="twitter:description" content="Online calculator to buy the right amount of toilet paper">
     <meta name="twitter:creator" content="gotpaper">
-    <meta name="twitter:image:src" content="http://got-paper.netlify.com/images/social/splash-twitter.png">
+    <meta name="twitter:image:src" content="http://got-paper.com/images/social/splash-twitter.png">
 
     <!-- Open Graph general (Facebook, Pinterest & Google+) -->
     <meta name="og:title" content="Got Paper">
     <meta name="og:description" content="Online calculator to buy the right amount of toilet paper">
-    <meta name="og:image" content="http://got-paper.netlify.com/images/social/splash-og.png">
+    <meta name="og:image" content="http://got-paper.com/images/social/splash-og.png">
     <meta name="og:url" content="http://got-paper.com">
     <meta name="og:site_name" content="Got Paper">
     <meta name="og:type" content="website">
