Add embedded image

--- a/public/index.html
+++ b/public/index.html
@@ -39,6 +39,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
   </head>
   <body>
+    <img src="/images/social/splash-og.png" height="0" style="display: block">
     <noscript>
       <strong>We're sorry but got-paper.com doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
