--- a/public/index.html
+++ b/public/index.html
@@ -1,63 +1,72 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0,user-scalable=no">
+<head>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-XRLWLYJHXG"></script>
+  <script>
+  window.dataLayer = window.dataLayer || []
+  function gtag () {dataLayer.push(arguments)}
+  gtag('js', new Date())
+  gtag('config', 'G-XRLWLYJHXG')
+  </script>
 
+  <!-- meta -->
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width,initial-scale=1.0,user-scalable=no">
 
-    <!-- Basic -->
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title>Got Paper?</title>
+  <!-- Basic -->
+  <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+  <title>Got Paper?</title>
 
-    <!-- Search Engine -->
-    <meta name="description" content="Online calculator to buy the right amount of toilet paper">
-    <meta name="image" content="http://got-paper.com/images/social/splash.png">
+  <!-- Search Engine -->
+  <meta name="description" content="Online calculator to buy the right amount of toilet paper">
+  <meta name="image" content="http://got-paper.com/images/social/splash.png">
 
-    <!-- Schema.org for Google -->
-    <meta itemprop="name" content="Got Paper">
-    <meta itemprop="description" content="Online calculator to buy the right amount of toilet paper">
-    <meta itemprop="image" content="http://got-paper.com/images/social/splash.png">
+  <!-- Schema.org for Google -->
+  <meta itemprop="name" content="Got Paper">
+  <meta itemprop="description" content="Online calculator to buy the right amount of toilet paper">
+  <meta itemprop="image" content="http://got-paper.com/images/social/splash.png">
 
-    <!-- Twitter -->
-    <meta name="twitter:card" content="summary">
-    <meta name="twitter:title" content="Got Paper">
-    <meta name="twitter:description" content="Online calculator to buy the right amount of toilet paper">
-    <meta name="twitter:creator" content="gotpaper">
-    <meta name="twitter:image:src" content="http://got-paper.com/images/social/splash-twitter.png">
+  <!-- Twitter -->
+  <meta name="twitter:card" content="summary">
+  <meta name="twitter:title" content="Got Paper">
+  <meta name="twitter:description" content="Online calculator to buy the right amount of toilet paper">
+  <meta name="twitter:creator" content="gotpaper">
+  <meta name="twitter:image:src" content="http://got-paper.com/images/social/splash-twitter.png">
 
-    <!-- Open Graph general (Facebook, Pinterest & Google+) -->
-    <meta name="og:title" content="Got Paper">
-    <meta name="og:description" content="Online calculator to buy the right amount of toilet paper">
-    <meta name="og:image" content="http://got-paper.com/images/social/splash-og.png">
-    <meta name="og:url" content="http://got-paper.com">
-    <meta name="og:site_name" content="Got Paper">
-    <meta name="og:type" content="website">
+  <!-- Open Graph general (Facebook, Pinterest & Google+) -->
+  <meta name="og:title" content="Got Paper">
+  <meta name="og:description" content="Online calculator to buy the right amount of toilet paper">
+  <meta name="og:image" content="http://got-paper.com/images/social/splash-og.png">
+  <meta name="og:url" content="http://got-paper.com">
+  <meta name="og:site_name" content="Got Paper">
+  <meta name="og:type" content="website">
 
-    <!-- Add to home screen for Android and modern mobile browsers -->
-    <link rel="manifest" href="<%= htmlWebpackPlugin.files.publicPath %>manifest.json">
-    <meta name="theme-color" content="#4DBA87">
+  <!-- Add to home screen for Android and modern mobile browsers -->
+  <link rel="manifest" href="<%= htmlWebpackPlugin.files.publicPath %>manifest.json">
+  <meta name="theme-color" content="#4DBA87">
 
-    <!-- Add to home screen for Safari on iOS -->
-    <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="apple-mobile-web-app-status-bar-style" content="black">
-    <meta name="apple-mobile-web-app-title" content="Got Paper?">
-    <link rel="apple-touch-icon" href="<%= htmlWebpackPlugin.files.publicPath %>images/icons/apple-touch-icon-152x152.png">
+  <!-- Add to home screen for Safari on iOS -->
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black">
+  <meta name="apple-mobile-web-app-title" content="Got Paper?">
+  <link rel="apple-touch-icon" href="<%= htmlWebpackPlugin.files.publicPath %>images/icons/apple-touch-icon-152x152.png">
 
-    <!-- Add to home screen for Windows -->
-    <meta name="msapplication-TileImage" content="<%= htmlWebpackPlugin.files.publicPath %>images/icons/msapplication-icon-144x144.png">
-    <meta name="msapplication-TileColor" content="#1660A6">
+  <!-- Add to home screen for Windows -->
+  <meta name="msapplication-TileImage" content="<%= htmlWebpackPlugin.files.publicPath %>images/icons/msapplication-icon-144x144.png">
+  <meta name="msapplication-TileColor" content="#1660A6">
 
-    <!-- assets -->
-    <link rel="stylesheet" href="https://use.typekit.net/lvl2shj.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-  </head>
-  <body>
-    <img src="/images/social/splash-og.png" height="0" style="display: block">
-    <noscript>
-      <strong>We're sorry but got-paper.com doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
-    </noscript>
-    <div id="app"></div>
-    <!-- built files will be auto injected -->
-  </body>
+  <!-- assets -->
+  <link rel="stylesheet" href="https://use.typekit.net/lvl2shj.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+</head>
+<body>
+<img src="/images/social/splash-og.png" height="0" style="display: block">
+<noscript>
+  <strong>We're sorry but got-paper.com doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+</noscript>
+<div id="app"></div>
+<!-- built files will be auto injected -->
+</body>
 </html>
