Change Twitter card size

--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
   <meta name="og:type" content="website">
 
   <!-- Twitter -->
-  <meta name="twitter:card" content="summary">
+  <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="Got Paper">
   <meta name="twitter:description" content="Online calculator to buy the right amount of toilet paper">
   <meta name="twitter:creator" content="gotpaper">
