--- a/public/index.html
+++ b/public/index.html
@@ -60,6 +60,9 @@
   <!-- assets -->
   <link rel="stylesheet" href="https://use.typekit.net/lvl2shj.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+
+  <!-- adsense -->
+  <script data-ad-client="ca-pub-5448509903830513" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
 <body>
 <img src="/images/social/splash-og.png" height="0" style="display: block">
