--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
 
   <!-- Open Graph general (Facebook, Pinterest & Google+) -->
   <meta name="og:title" content="Got Paper">
-  <meta name="og:description" content="Online calculator to buy the right amount of toilet paper">
+  <meta name="og:description" content="A cheeky online calculator to buy the right amount of toilet paper">
   <meta name="og:image" content="http://got-paper.com/images/social/splash-og.png">
   <meta name="og:url" content="http://got-paper.com">
   <meta name="og:site_name" content="Got Paper">
@@ -30,17 +30,17 @@
   <!-- Twitter -->
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="Got Paper">
-  <meta name="twitter:description" content="Online calculator to buy the right amount of toilet paper">
+  <meta name="twitter:description" content="A cheeky online calculator to buy the right amount of toilet paper">
   <meta name="twitter:creator" content="gotpaper">
   <meta name="twitter:image:src" content="http://got-paper.com/images/social/splash-twitter.png">
 
   <!-- Search Engine -->
-  <meta name="description" content="Online calculator to buy the right amount of toilet paper">
+  <meta name="description" content="A cheeky online calculator to buy the right amount of toilet paper">
   <meta name="image" content="http://got-paper.com/images/social/splash.png">
 
   <!-- Schema.org for Google -->
   <meta itemprop="name" content="Got Paper">
-  <meta itemprop="description" content="Online calculator to buy the right amount of toilet paper">
+  <meta itemprop="description" content="A cheeky online calculator to buy the right amount of toilet paper">
   <meta itemprop="image" content="http://got-paper.com/images/social/splash.png">
 
   <!-- Add to home screen for Android and modern mobile browsers -->
