Clean up form, make totals toggleable

--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,9 @@
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-XRLWLYJHXG"></script>
   <script>
   window.dataLayer = window.dataLayer || []
+
   function gtag () {dataLayer.push(arguments)}
+
   gtag('js', new Date())
   gtag('config', 'G-XRLWLYJHXG')
   </script>
@@ -13,7 +15,7 @@
   <!-- meta -->
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width,initial-scale=1.0,user-scalable=no">
+  <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=no">
 
   <!-- Basic -->
   <link rel="icon" href="<%= BASE_URL %>favicon.ico">
