--- a/public/index.html
+++ b/public/index.html
@@ -5,9 +5,7 @@
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-XRLWLYJHXG"></script>
   <script>
   window.dataLayer = window.dataLayer || []
-
   function gtag () {dataLayer.push(arguments)}
-
   gtag('js', new Date())
   gtag('config', 'G-XRLWLYJHXG')
   </script>
@@ -22,26 +20,32 @@
   <title>Got Paper?</title>
 
   <!-- Open Graph general (Facebook, Pinterest & Google+) -->
-  <meta name="og:title" content="Got Paper">
+  <meta name="og:title" content="Got Paper?">
   <meta name="og:description" content="A cheeky online calculator to buy the right amount of toilet paper">
   <meta name="og:image" content="http://got-paper.com/images/social/splash-og.png">
   <meta name="og:url" content="http://got-paper.com">
-  <meta name="og:site_name" content="Got Paper">
+  <meta name="og:site_name" content="Got Paper?">
   <meta name="og:type" content="website">
 
   <!-- Twitter -->
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="Got Paper">
+  <meta name="twitter:title" content="Got Paper?">
   <meta name="twitter:description" content="A cheeky online calculator to buy the right amount of toilet paper">
   <meta name="twitter:creator" content="gotpaper">
   <meta name="twitter:image:src" content="http://got-paper.com/images/social/splash-twitter.png">
+
+  <!-- Open Graph WhatsApp -->
+  <meta property="og:image" content="http://got-paper.com/images/social/splash-whatsapp.png">
+  <meta property="og:image:type" content="image/png" />
+  <meta property="og:image:width" content="400" />
+  <meta property="og:image:height" content="400" />
 
   <!-- Search Engine -->
   <meta name="description" content="A cheeky online calculator to buy the right amount of toilet paper">
   <meta name="image" content="http://got-paper.com/images/social/splash.png">
 
   <!-- Schema.org for Google -->
-  <meta itemprop="name" content="Got Paper">
+  <meta itemprop="name" content="Got Paper?">
   <meta itemprop="description" content="A cheeky online calculator to buy the right amount of toilet paper">
   <meta itemprop="image" content="http://got-paper.com/images/social/splash.png">
 
@@ -66,9 +70,6 @@
 
   <!-- google site verification -->
   <meta name="google-site-verification" content="BdgBbSBk7Ualjk0zARykP5RTAoqXynY2EVTQFJGCVnQ" />
-
-  <!-- adsense -->
-  <!--<script data-ad-client="ca-pub-5448509903830513" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>-->
 </head>
 <body>
 <img src="/images/social/splash-og.png" height="0" style="display: block">
