--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,10 @@
   <link rel="icon" href="<%= BASE_URL %>favicon.ico">
   <title>Got Paper?</title>
 
+  <!--keywords -->
+  <meta name="news_keywords" content="wuhan coronavirus, coronavirus, Toilet Paper, Toilet Roll, Lifestyle UK, Panic Buying">
+  <link href="http://got-paper.com" rel="amphtml">
+
   <!-- Open Graph general (Facebook, Pinterest & Google+) -->
   <meta name="og:title" content="Got Paper?">
   <meta name="og:description" content="A cheeky online calculator to buy the right amount of toilet paper">
@@ -33,12 +37,17 @@
   <meta name="twitter:description" content="A cheeky online calculator to buy the right amount of toilet paper">
   <meta name="twitter:creator" content="gotpaper">
   <meta name="twitter:image:src" content="http://got-paper.com/images/social/splash-twitter.png">
+  <meta name="twitter:site" content="@haveyougotpaper">
 
   <!-- Open Graph WhatsApp -->
   <meta property="og:image" content="http://got-paper.com/images/social/splash-whatsapp.png">
   <meta property="og:image:type" content="image/png" />
   <meta property="og:image:width" content="400" />
   <meta property="og:image:height" content="400" />
+
+  <!-- additional images -->
+  <meta name="sailthru.image.full" content="http://got-paper.com/images/social/splash-whatsapp.png">
+  <meta name="sailthru.image.thumb" content="http://got-paper.com/images/social/splash-whatsapp-small.png">
 
   <!-- Search Engine -->
   <meta name="description" content="A cheeky online calculator to buy the right amount of toilet paper">
