Fix https mixed content

--- a/public/index.html
+++ b/public/index.html
@@ -21,13 +21,13 @@
 
   <!--keywords -->
   <meta name="news_keywords" content="wuhan coronavirus, coronavirus, Toilet Paper, Toilet Roll, Lifestyle UK, Panic Buying">
-  <link href="http://got-paper.com" rel="amphtml">
+  <link href="https://got-paper.com" rel="amphtml">
 
   <!-- Open Graph general (Facebook, Pinterest & Google+) -->
   <meta name="og:title" content="Got Paper?">
   <meta name="og:description" content="A cheeky online calculator to buy the right amount of toilet paper">
-  <meta name="og:image" content="http://got-paper.com/images/social/splash-og.png">
-  <meta name="og:url" content="http://got-paper.com">
+  <meta name="og:image" content="https://got-paper.com/images/social/splash-og.png">
+  <meta name="og:url" content="https://got-paper.com">
   <meta name="og:site_name" content="Got Paper?">
   <meta name="og:type" content="website">
 
@@ -36,27 +36,27 @@
   <meta name="twitter:title" content="Got Paper?">
   <meta name="twitter:description" content="A cheeky online calculator to buy the right amount of toilet paper">
   <meta name="twitter:creator" content="gotpaper">
-  <meta name="twitter:image:src" content="http://got-paper.com/images/social/splash-twitter.png">
+  <meta name="twitter:image:src" content="https://got-paper.com/images/social/splash-twitter.png">
   <meta name="twitter:site" content="@haveyougotpaper">
 
   <!-- Open Graph WhatsApp -->
-  <meta property="og:image" content="http://got-paper.com/images/social/splash-whatsapp.png">
+  <meta property="og:image" content="https://got-paper.com/images/social/splash-whatsapp.png">
   <meta property="og:image:type" content="image/png" />
   <meta property="og:image:width" content="400" />
   <meta property="og:image:height" content="400" />
 
   <!-- additional images -->
-  <meta name="sailthru.image.full" content="http://got-paper.com/images/social/splash-whatsapp.png">
-  <meta name="sailthru.image.thumb" content="http://got-paper.com/images/social/splash-whatsapp-small.png">
+  <meta name="sailthru.image.full" content="https://got-paper.com/images/social/splash-whatsapp.png">
+  <meta name="sailthru.image.thumb" content="https://got-paper.com/images/social/splash-whatsapp-small.png">
 
   <!-- Search Engine -->
   <meta name="description" content="A cheeky online calculator to buy the right amount of toilet paper">
-  <meta name="image" content="http://got-paper.com/images/social/splash.png">
+  <meta name="image" content="https://got-paper.com/images/social/splash.png">
 
   <!-- Schema.org for Google -->
   <meta itemprop="name" content="Got Paper?">
   <meta itemprop="description" content="A cheeky online calculator to buy the right amount of toilet paper">
-  <meta itemprop="image" content="http://got-paper.com/images/social/splash.png">
+  <meta itemprop="image" content="https://got-paper.com/images/social/splash.png">
 
   <!-- Add to home screen for Android and modern mobile browsers -->
   <link rel="manifest" href="<%= htmlWebpackPlugin.files.publicPath %>manifest.json">
