--- a/public/index.html
+++ b/public/index.html
@@ -23,11 +23,12 @@
   <meta name="news_keywords" content="wuhan coronavirus, coronavirus, Toilet Paper, Toilet Roll, Lifestyle UK, Panic Buying">
   <link href="https://got-paper.com" rel="amphtml">
 
-  <!-- Open Graph WhatsApp -->
+  <!-- Open Graph WhatsApp
   <meta property="og:image" content="https://got-paper.com/images/social/splash-whatsapp.png">
   <meta property="og:image:type" content="image/png" />
   <meta property="og:image:width" content="400" />
   <meta property="og:image:height" content="400" />
+  -->
 
   <!-- Open Graph general (Facebook, Pinterest & Google+) -->
   <meta name="og:title" content="Got Paper?">
