Update meta descriptions

--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,7 @@
   <!-- Basic -->
   <link rel="icon" href="<%= BASE_URL %>favicon.ico">
   <title>Got Paper?</title>
+  <meta name="description" content="A cheeky web and mobile app to calculate your toilet paper needs">
 
   <!--keywords -->
   <meta name="news_keywords" content="wuhan coronavirus, coronavirus, Toilet Paper, Toilet Roll, Lifestyle UK, Panic Buying">
@@ -25,7 +26,7 @@
 
   <!-- Open Graph general (Facebook, Pinterest & Google+) -->
   <meta name="og:title" content="Got Paper?">
-  <meta name="og:description" content="A cheeky online calculator to buy the right amount of toilet paper">
+  <meta name="og:description" content="A cheeky web and mobile app to calculate your toilet paper needs">
   <meta name="og:image" content="https://got-paper.com/images/social/splash-og.png">
   <meta name="og:url" content="https://got-paper.com">
   <meta name="og:site_name" content="Got Paper?">
@@ -34,7 +35,7 @@
   <!-- Twitter -->
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="Got Paper?">
-  <meta name="twitter:description" content="A cheeky online calculator to buy the right amount of toilet paper">
+  <meta name="twitter:description" content="A cheeky web and mobile app to calculate your toilet paper needs">
   <meta name="twitter:creator" content="gotpaper">
   <meta name="twitter:image:src" content="https://got-paper.com/images/social/splash-twitter.png">
   <meta name="twitter:site" content="@haveyougotpaper">
@@ -44,12 +45,12 @@
   <meta name="sailthru.image.thumb" content="https://got-paper.com/images/social/splash-whatsapp-small.png">
 
   <!-- Search Engine -->
-  <meta name="description" content="A cheeky online calculator to buy the right amount of toilet paper">
+  <meta name="description" content="A cheeky web and mobile app to calculate your toilet paper needs">
   <meta name="image" content="https://got-paper.com/images/social/splash.png">
 
   <!-- Schema.org for Google -->
   <meta itemprop="name" content="Got Paper?">
-  <meta itemprop="description" content="A cheeky online calculator to buy the right amount of toilet paper">
+  <meta itemprop="description" content="A cheeky web and mobile app to calculate your toilet paper needs">
   <meta itemprop="image" content="https://got-paper.com/images/social/splash.png">
 
   <!-- Add to home screen for Android and modern mobile browsers -->
