Change meta attribute "name" to "property"

--- a/public/index.html
+++ b/public/index.html
@@ -25,24 +25,24 @@
   <link href="https://got-paper.com" rel="amphtml">
 
   <!-- Open Graph general (Facebook, Pinterest & Google+) -->
-  <meta name="og:title" content="Got Paper?">
-  <meta name="og:description" content="A cheeky web and mobile app to calculate your toilet paper needs">
-  <meta name="og:image" content="https://got-paper.com/images/social/splash-og.png">
-  <meta name="og:url" content="https://got-paper.com">
-  <meta name="og:site_name" content="Got Paper?">
-  <meta name="og:type" content="website">
+  <meta property="og:title" content="Got Paper?">
+  <meta property="og:description" content="A cheeky web and mobile app to calculate your toilet paper needs">
+  <meta property="og:image" content="https://got-paper.com/images/social/splash-og.png">
+  <meta property="og:url" content="https://got-paper.com">
+  <meta property="og:site_name" content="Got Paper?">
+  <meta property="og:type" content="website">
 
   <!-- Twitter -->
-  <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="Got Paper?">
-  <meta name="twitter:description" content="A cheeky web and mobile app to calculate your toilet paper needs">
-  <meta name="twitter:creator" content="gotpaper">
-  <meta name="twitter:image:src" content="https://got-paper.com/images/social/splash-twitter.png">
-  <meta name="twitter:site" content="@haveyougotpaper">
+  <meta property="twitter:card" content="summary_large_image">
+  <meta property="twitter:title" content="Got Paper?">
+  <meta property="twitter:description" content="A cheeky web and mobile app to calculate your toilet paper needs">
+  <meta property="twitter:creator" content="gotpaper">
+  <meta property="twitter:image:src" content="https://got-paper.com/images/social/splash-twitter.png">
+  <meta property="twitter:site" content="@haveyougotpaper">
 
   <!-- additional images -->
-  <meta name="sailthru.image.full" content="https://got-paper.com/images/social/splash-whatsapp.png">
-  <meta name="sailthru.image.thumb" content="https://got-paper.com/images/social/splash-whatsapp-small.png">
+  <meta property="sailthru.image.full" content="https://got-paper.com/images/social/splash-whatsapp.png">
+  <meta property="sailthru.image.thumb" content="https://got-paper.com/images/social/splash-whatsapp-small.png">
 
   <!-- Search Engine -->
   <meta name="description" content="A cheeky web and mobile app to calculate your toilet paper needs">
