--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,8 @@
   <!-- Basic -->
   <link rel="icon" href="<%= BASE_URL %>favicon.ico">
   <title>Got Paper?</title>
-  <meta name="description" content="A cheeky web and mobile app to calculate your toilet paper needs">
+  <meta name="description" content="A cheeky desktop, tablet and mobile app to calculate yours and your family's toilet paper needs during the Coronavirus pandemic">
+  <meta name="author" content="Dave Stewart">
 
   <!--keywords -->
   <meta name="news_keywords" content="wuhan coronavirus, coronavirus, Toilet Paper, Toilet Roll, Lifestyle UK, Panic Buying">
@@ -26,7 +27,7 @@
 
   <!-- Open Graph general (Facebook, Pinterest & Google+) -->
   <meta property="og:title" content="Got Paper?">
-  <meta property="og:description" content="A cheeky web and mobile app to calculate your toilet paper needs">
+  <meta property="og:description" content="A cheeky desktop, tablet and mobile app to calculate yours and your family's toilet paper needs during the Coronavirus pandemic">
   <meta property="og:image" content="https://got-paper.com/images/social/splash-og.png">
   <meta property="og:url" content="https://got-paper.com">
   <meta property="og:site_name" content="Got Paper?">
@@ -35,7 +36,7 @@
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image">
   <meta property="twitter:title" content="Got Paper?">
-  <meta property="twitter:description" content="A cheeky web and mobile app to calculate your toilet paper needs">
+  <meta property="twitter:description" content="A cheeky desktop, tablet and mobile app to calculate yours and your family's toilet paper needs during the Coronavirus pandemic">
   <meta property="twitter:creator" content="gotpaper">
   <meta property="twitter:image:src" content="https://got-paper.com/images/social/splash-twitter.png">
   <meta property="twitter:site" content="@haveyougotpaper">
