--- a/public/index.html
+++ b/public/index.html
@@ -73,8 +73,9 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
   <script type='text/javascript' src='https://ko-fi.com/widgets/widget_2.js'></script>
 
-  <!-- google site verification -->
+  <!-- site verification -->
   <meta name="google-site-verification" content="BdgBbSBk7Ualjk0zARykP5RTAoqXynY2EVTQFJGCVnQ" />
+  <meta name="ahrefs-site-verification" content="60595a106a8b0fe484256bc465e16ff2ef5ce50f252951f364d45cacdc9c959b">
 </head>
 <body>
 <img src="/images/social/splash-og.png" height="0" style="display: block">
