--- a/public/index.html
+++ b/public/index.html
@@ -17,8 +17,11 @@
 
   <!-- Basic -->
   <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+
+  <!-- Search Engine -->
   <title>Got Paper?</title>
   <meta name="description" content="A cheeky desktop, tablet and mobile app to calculate yours and your family's toilet paper needs during the Coronavirus pandemic">
+  <meta name="image" content="https://got-paper.com/images/social/splash.png">
   <meta name="author" content="Dave Stewart">
 
   <!--keywords -->
@@ -45,13 +48,9 @@
   <meta property="sailthru.image.full" content="https://got-paper.com/images/social/splash-whatsapp.png">
   <meta property="sailthru.image.thumb" content="https://got-paper.com/images/social/splash-whatsapp-small.png">
 
-  <!-- Search Engine -->
-  <meta name="description" content="A cheeky web and mobile app to calculate your toilet paper needs">
-  <meta name="image" content="https://got-paper.com/images/social/splash.png">
-
   <!-- Schema.org for Google -->
   <meta itemprop="name" content="Got Paper?">
-  <meta itemprop="description" content="A cheeky web and mobile app to calculate your toilet paper needs">
+  <meta itemprop="description" content="A cheeky desktop, tablet and mobile app to calculate yours and your family's toilet paper needs during the Coronavirus pandemic">
   <meta itemprop="image" content="https://got-paper.com/images/social/splash.png">
 
   <!-- Add to home screen for Android and modern mobile browsers -->
@@ -62,7 +61,24 @@
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
   <meta name="apple-mobile-web-app-title" content="Got Paper?">
-  <link rel="apple-touch-icon" href="<%= htmlWebpackPlugin.files.publicPath %>images/icons/apple-touch-icon-152x152.png">
+
+  <!-- iOS icons -->
+  <link rel="apple-touch-icon" href="/images/icons/apple-touch-icon-60x60.png" sizes="60x60">
+  <link rel="apple-touch-icon" href="/images/icons/apple-touch-icon-76x76.png" sizes="76x76">
+  <link rel="apple-touch-icon" href="/images/icons/apple-touch-icon-120x120.png" sizes="120x120">
+  <link rel="apple-touch-icon" href="/images/icons/apple-touch-icon-152x152.png" sizes="152x152">
+  <link rel="apple-touch-icon" href="/images/icons/apple-touch-icon-180x180.png" sizes="180x180">
+  <link rel="apple-touch-icon" href="/images/icons/apple-touch-icon-152x152.png">
+
+  <!-- Generic -->
+  <link rel="icon" href="/images/icons/favicon-16x16.png" sizes="16x16">
+  <link rel="icon" href="/images/icons/favicon-32x32.png" sizes="32x32">
+  <link rel="icon" href="/images/icons/favicon-120x120.png" sizes="120x120">
+  <link rel="icon" href="/images/icons/favicon-512x512.png" sizes="512x512">
+
+  <!-- Android -->
+  <link rel="shortcut icon" href="/images/icons/android-chrome-192x192.png" sizes="192x192" >
+  <link rel="shortcut icon" href="/images/icons/android-chrome-512x512.png" sizes="512x512" >
 
   <!-- Add to home screen for Windows -->
   <meta name="msapplication-TileImage" content="<%= htmlWebpackPlugin.files.publicPath %>images/icons/msapplication-icon-144x144.png">
@@ -78,7 +94,6 @@
   <meta name="ahrefs-site-verification" content="60595a106a8b0fe484256bc465e16ff2ef5ce50f252951f364d45cacdc9c959b">
 </head>
 <body>
-<img src="/images/social/splash-og.png" height="0" style="display: block">
 <noscript>
   <strong>We're sorry but got-paper.com doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
 </noscript>
