--- a/app.html
+++ b/app.html
@@ -5,36 +5,29 @@
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-XRLWLYJHXG"></script>
   <script>
   window.dataLayer = window.dataLayer || []
+
   function gtag () {dataLayer.push(arguments)}
+
   gtag('js', new Date())
   gtag('config', 'G-XRLWLYJHXG')
   </script>
 
 
   {{ HEAD }}
-</head>
-<body {{ BODY_ATTRS }}>
-{{ APP }}
-</body>
-</html>
 
-
-<!DOCTYPE html>
-<html lang="en">
-<head>
   <!-- Search Engine -->
-  <title>Got Paper?</title>
-  <meta name="description" content="A cheeky desktop, tablet and mobile app to calculate yours and your family's toilet paper needs during the Coronavirus pandemic">
   <meta name="image" content="https://got-paper.com/images/social/splash.png">
   <meta name="author" content="Dave Stewart">
 
   <!--keywords -->
-  <meta name="news_keywords" content="wuhan coronavirus, coronavirus, Toilet Paper, Toilet Roll, Lifestyle UK, Panic Buying">
+  <meta name="news_keywords"
+        content="wuhan coronavirus, coronavirus, Toilet Paper, Toilet Roll, Lifestyle UK, Panic Buying">
   <link href="https://got-paper.com" rel="amphtml">
 
   <!-- Open Graph general (Facebook, Pinterest & Google+) -->
   <meta property="og:title" content="Got Paper?">
-  <meta property="og:description" content="A cheeky desktop, tablet and mobile app to calculate yours and your family's toilet paper needs during the Coronavirus pandemic">
+  <meta property="og:description"
+        content="A cheeky desktop, tablet and mobile app to calculate yours and your family's toilet paper needs during the Coronavirus pandemic">
   <meta property="og:url" content="https://got-paper.com">
   <meta property="og:site_name" content="Got Paper?">
   <meta property="og:type" content="website">
@@ -44,7 +37,8 @@
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image">
   <meta property="twitter:title" content="Got Paper?">
-  <meta property="twitter:description" content="A cheeky desktop, tablet and mobile app to calculate yours and your family's toilet paper needs during the Coronavirus pandemic">
+  <meta property="twitter:description"
+        content="A cheeky desktop, tablet and mobile app to calculate yours and your family's toilet paper needs during the Coronavirus pandemic">
   <meta property="twitter:creator" content="gotpaper">
   <meta property="twitter:image:src" content="https://got-paper.com/images/social/splash-twitter.png">
   <meta property="twitter:site" content="@haveyougotpaper">
@@ -55,7 +49,8 @@
 
   <!-- Schema.org for Google -->
   <meta itemprop="name" content="Got Paper?">
-  <meta itemprop="description" content="A cheeky desktop, tablet and mobile app to calculate yours and your family's toilet paper needs during the Coronavirus pandemic">
+  <meta itemprop="description"
+        content="A cheeky desktop, tablet and mobile app to calculate yours and your family's toilet paper needs during the Coronavirus pandemic">
   <meta itemprop="image" content="https://got-paper.com/images/social/splash.png">
 
   <!-- Add to home screen for Android and modern mobile browsers -->
@@ -80,8 +75,8 @@
   <link rel="icon" href="/images/icons/favicon-16x16.png" sizes="16x16">
 
   <!-- Android -->
-  <link rel="shortcut icon" href="/images/icons/android-chrome-512x512.png" sizes="512x512" >
-  <link rel="shortcut icon" href="/images/icons/android-chrome-192x192.png" sizes="192x192" >
+  <link rel="shortcut icon" href="/images/icons/android-chrome-512x512.png" sizes="512x512">
+  <link rel="shortcut icon" href="/images/icons/android-chrome-192x192.png" sizes="192x192">
 
   <!-- Add to home screen for Windows -->
   <meta name="msapplication-TileImage" content="/images/icons/msapplication-icon-144x144.png">
@@ -89,18 +84,19 @@
 
   <!-- assets -->
   <link rel="stylesheet" href="https://use.typekit.net/lvl2shj.css">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+        integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
   <script type='text/javascript' src='https://ko-fi.com/widgets/widget_2.js'></script>
 
   <!-- site verification -->
   <meta name="google-site-verification" content="BdgBbSBk7Ualjk0zARykP5RTAoqXynY2EVTQFJGCVnQ" />
   <meta name="ahrefs-site-verification" content="60595a106a8b0fe484256bc465e16ff2ef5ce50f252951f364d45cacdc9c959b">
 </head>
-<body>
+<body {{ BODY_ATTRS }}>
 <noscript>
-  <strong>We're sorry but got-paper.com doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+  <strong>We're sorry but got-paper.com doesn't work properly without JavaScript enabled. Please enable it to
+    continue.</strong>
 </noscript>
-<div id="app"></div>
-<!-- built files will be auto injected -->
+{{ APP }}
 </body>
 </html>
