--- a/app.html
+++ b/app.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head {{ HEAD_ATTRS }}>
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-XRLWLYJHXG"></script>
@@ -15,37 +15,6 @@
 
   {{ HEAD }}
 
-  <!-- Search Engine -->
-  <meta name="image" content="https://got-paper.com/images/social/splash.png">
-  <meta name="author" content="Dave Stewart">
-
-  <!--keywords -->
-  <meta name="news_keywords"
-        content="wuhan coronavirus, coronavirus, Toilet Paper, Toilet Roll, Lifestyle UK, Panic Buying">
-  <link href="https://got-paper.com" rel="amphtml">
-
-  <!-- Open Graph general (Facebook, Pinterest & Google+) -->
-  <meta property="og:title" content="Got Paper?">
-  <meta property="og:description"
-        content="A cheeky desktop, tablet and mobile app to calculate yours and your family's toilet paper needs during the Coronavirus pandemic">
-  <meta property="og:url" content="https://got-paper.com">
-  <meta property="og:site_name" content="Got Paper?">
-  <meta property="og:type" content="website">
-  <meta property="og:image" itemprop="image" content="https://got-paper.com/images/social/splash-og.png">
-  <meta property="og:image:secure_url" content="https://got-paper.com/images/icons/favicon-256x256.png">
-
-  <!-- Twitter -->
-  <meta property="twitter:card" content="summary_large_image">
-  <meta property="twitter:title" content="Got Paper?">
-  <meta property="twitter:description"
-        content="A cheeky desktop, tablet and mobile app to calculate yours and your family's toilet paper needs during the Coronavirus pandemic">
-  <meta property="twitter:creator" content="gotpaper">
-  <meta property="twitter:image:src" content="https://got-paper.com/images/social/splash-twitter.png">
-  <meta property="twitter:site" content="@haveyougotpaper">
-
-  <!-- additional images -->
-  <meta property="sailthru.image.full" content="https://got-paper.com/images/social/splash-whatsapp.png">
-  <meta property="sailthru.image.thumb" content="https://got-paper.com/images/social/splash-whatsapp-small.png">
 
   <!-- Schema.org for Google -->
   <meta itemprop="name" content="Got Paper?">
@@ -53,34 +22,10 @@
         content="A cheeky desktop, tablet and mobile app to calculate yours and your family's toilet paper needs during the Coronavirus pandemic">
   <meta itemprop="image" content="https://got-paper.com/images/social/splash.png">
 
-  <!-- Add to home screen for Android and modern mobile browsers -->
-  <link rel="manifest" href="/manifest.json">
-  <meta name="theme-color" content="#4DBA87">
-
   <!-- Add to home screen for Safari on iOS -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
   <meta name="apple-mobile-web-app-title" content="Got Paper?">
-
-  <!-- iOS icons -->
-  <link rel="apple-touch-icon" href="/images/icons/apple-touch-icon-180x180.png" sizes="180x180">
-  <link rel="apple-touch-icon" href="/images/icons/apple-touch-icon-152x152.png" sizes="152x152">
-  <link rel="apple-touch-icon" href="/images/icons/apple-touch-icon-120x120.png" sizes="120x120">
-  <link rel="apple-touch-icon" href="/images/icons/apple-touch-icon-76x76.png" sizes="76x76">
-  <link rel="apple-touch-icon" href="/images/icons/apple-touch-icon-60x60.png" sizes="60x60">
-
-  <!-- Generic -->
-  <link rel="icon" href="/images/icons/favicon-256x256.png" sizes="512x512">
-  <link rel="icon" href="/images/icons/favicon-32x32.png" sizes="32x32">
-  <link rel="icon" href="/images/icons/favicon-16x16.png" sizes="16x16">
-
-  <!-- Android -->
-  <link rel="shortcut icon" href="/images/icons/android-chrome-512x512.png" sizes="512x512">
-  <link rel="shortcut icon" href="/images/icons/android-chrome-192x192.png" sizes="192x192">
-
-  <!-- Add to home screen for Windows -->
-  <meta name="msapplication-TileImage" content="/images/icons/msapplication-icon-144x144.png">
-  <meta name="msapplication-TileColor" content="#1660A6">
 
   <!-- assets -->
   <link rel="stylesheet" href="https://use.typekit.net/lvl2shj.css">
