chore: consolidate and centralise all site config

--- a/app.html
+++ b/app.html
@@ -12,23 +12,12 @@
   gtag('config', 'G-XRLWLYJHXG')
   </script>
 
-
   {{ HEAD }}
-
-
-  <!-- Schema.org for Google -->
-  <meta itemprop="name" content="Got Paper?">
-  <meta itemprop="description"
-        content="A cheeky desktop, tablet and mobile app to calculate yours and your family's toilet paper needs during the Coronavirus pandemic">
-  <meta itemprop="image" content="https://got-paper.com/images/social/splash.png">
 
   <!-- Add to home screen for Safari on iOS -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
   <meta name="apple-mobile-web-app-title" content="Got Paper?">
-
-  <!-- assets -->
-  <script type='text/javascript' src='https://ko-fi.com/widgets/widget_2.js'></script>
 
   <!-- site verification -->
   <meta name="google-site-verification" content="BdgBbSBk7Ualjk0zARykP5RTAoqXynY2EVTQFJGCVnQ" />
@@ -36,8 +25,7 @@
 </head>
 <body {{ BODY_ATTRS }}>
 <noscript>
-  <strong>We're sorry but got-paper.com doesn't work properly without JavaScript enabled. Please enable it to
-    continue.</strong>
+  <strong>We're sorry but got-paper.com doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
 </noscript>
 {{ APP }}
 </body>
