--- a/app.html
+++ b/app.html
@@ -2,14 +2,14 @@
 <html>
 <head {{ HEAD_ATTRS }}>
   <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-XRLWLYJHXG"></script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id={{ process.env.VUE_APP_GA }}"></script>
   <script>
   window.dataLayer = window.dataLayer || []
 
   function gtag () {dataLayer.push(arguments)}
 
   gtag('js', new Date())
-  gtag('config', 'G-XRLWLYJHXG')
+  gtag('config', '{{ process.env.VUE_APP_GA }}')
   </script>
 
   {{ HEAD }}
